# python-generic-updater

./: .gitignore  DEV-README.md  PyPi-README.md  README.md  pyproject.toml  requirements.txt
python_visual_update_express/: __init__.py  application.py
python_visual_update_express/data/: general_settings.py
python_visual_update_express/libs/: threading.py  update_manager.py
python_visual_update_express/ui/: error_handling.py  status_text_widget.py  updater_window.py  window_content.py
src/data/: general_settings.py
src/libs/: file_download.py  update_manager.py  updates_info.py
src/ui/: error_handling.py  status_text_widget.py  window_content.py
